--- a/app/jade/flight-payment-step-5.jade
+++ b/app/jade/flight-payment-step-5.jade
@@ -38,8 +38,7 @@ block main
 
         .col-md-4.download-ticket.text-center
           p.m-t-md E-Ticket dapat juga diunduh disini:
-          a.btn-download-e-ticket(href="#")
-            img(src="img/btn-download-eticket.png", alt="Download E-Ticket")
+          a.btn-download-e-ticket(href="#") Download E-Ticket
         .clearfix
 
       .tanda-bukti-pemesanan.m-t-lg
