--- a/app/less/helper/app.utilities.less
+++ b/app/less/helper/app.utilities.less
@@ -78,7 +78,7 @@ label {
 .text-orange{color: #f6b44b}
 a.text-orange {color: #ef9630}
 .text-xl{font-size: 22px}
-.text-lg{font-size: @font-size-large}
+.text-lg{font-size: @font-size-large + 1}
 .text-md{font-size: @font-size-base + 2}
 .text-sm{font-size: @font-size-small + 1 }
 .text-xs{font-size: @font-size-small - 2}
