--- a/app/less/helper/icons.less
+++ b/app/less/helper/icons.less
@@ -284,5 +284,11 @@
       height: 12px;
       background-position: -490px -18px;
     }
+
+    &-download-voucher {
+      width: 233px;
+      height: 50px;
+      background-position: -304px -258px
+    }
   }
 }
