--- a/app/less/web/flights.less
+++ b/app/less/web/flights.less
@@ -428,6 +428,16 @@
 .flight-payment-step-5 {
   font-size: 13px;
 
+  .btn-download-e-ticket {
+    display: inline-block;
+    width: 296px;
+    height: 50px;
+    background-image: url(../img/icon-bg-white.png);
+    background-position: -2px -258px;
+    text-indent: -9999px;
+    overflow: hidden;
+  }
+
   .section-title {
     .booking-page .section-title
   }
