--- a/app/jade/include/mixin.jade
+++ b/app/jade/include/mixin.jade
@@ -89,7 +89,7 @@ mixin headerActive(current)
 
         ul.nav.navbar-nav.navbar-right
           li
-            a.b-r-white(href='login.html') Login
+            a.b-r-white(href='#', data-toggle="modal", data-target="#loginModal") Login
           li
             a(href='register.html') Register
       .clearfix
