--- a/app/less/web/navbar.less
+++ b/app/less/web/navbar.less
@@ -70,7 +70,9 @@
         color: #fff;
         line-height: 14px;
         padding: 0 10px;
-        &:hover {
+        &:hover,
+        &:focus {
+          outline: 0;
           background: none;
         }
       }
