--- a/app/less/helper/form.less
+++ b/app/less/helper/form.less
@@ -197,6 +197,14 @@
       }
     }
 
+    &.register {
+      width: 298px;
+
+      &.b {
+        border-color: #d0d0d0
+      }
+    }
+
     &.name {
       width: 320px;
     }
