--- a/app/css/sapta-tour.css
+++ b/app/css/sapta-tour.css
@@ -3508,6 +3508,12 @@ html[xmlns] .flexslider .slides {
   -o-box-shadow: '' none 1px 2px rgba(0, 0, 0, 0.2);
   box-shadow: '' none 1px 2px rgba(0, 0, 0, 0.2);
 }
+.sapta-form .boxing.register {
+  width: 298px;
+}
+.sapta-form .boxing.register.b {
+  border-color: #d0d0d0;
+}
 .sapta-form .boxing.name {
   width: 320px;
 }
@@ -5715,6 +5721,50 @@ html[xmlns] .flexslider .slides {
 }
 #loginModal .modal-content form :-ms-input-placeholder {
   font-size: 15px;
+}
+.registe-page .head-title {
+  color: #4c4c4c;
+  font-size: 30px;
+}
+.registe-page .head-title.text-white {
+  color: #fff;
+}
+.registe-page form {
+  width: 623px;
+  margin: 0 auto;
+}
+.registe-page form .head-bar {
+  background: url(../img/bg-bar-user-login-register.png) no-repeat 0 0;
+  height: 63px;
+  width: 100%;
+  padding: 14px 0 0 15px;
+}
+.registe-page form .head-bar span.f-bold {
+  width: 335px;
+  line-height: 38px;
+  font-size: 16px;
+}
+.registe-page form .head-bar .btn {
+  color: #fff;
+  border-radius: 4px;
+  text-align: center;
+  text-shadow: 0px 1px 0px rgba(0, 0, 0, 0.5);
+  line-height: 34px;
+  margin-top: 0;
+  padding: 0px 15px;
+}
+.registe-page form .head-bar .btn-login {
+  background: #fff;
+  color: #000;
+  text-shadow: none;
+  border: 1px solid #c0c0c0;
+}
+.registe-page form .head-bar .btn-fb {
+  background: #5e76ac;
+}
+.registe-page form button[type="submit"] {
+  width: 250px;
+  letter-spacing: 0.5px;
 }
 .datepicker {
   border-radius: 4px;
