--- a/app/less/web/user.less
+++ b/app/less/web/user.less
@@ -112,3 +112,59 @@ body {
     }
   }
 }
+
+
+.registe-page {
+  .head-title {
+    color: #4c4c4c;
+    font-size: 30px;
+
+    &.text-white {
+      color: #fff;
+    }
+  }
+
+  form {
+    width: 623px;
+    margin: 0 auto;
+
+    .head-bar {
+      background: url(../img/bg-bar-user-login-register.png) no-repeat 0 0;
+      height: 63px;
+      width: 100%;
+      padding: 14px 0 0 15px;
+
+      span.f-bold {
+        width: 335px;
+        line-height: 38px;
+        font-size: 16px;
+      }
+
+      .btn {
+        color: #fff;
+        border-radius: 4px;
+        text-align: center;
+        text-shadow: 0px 1px 0px rgba(0, 0, 0, 0.5);
+        line-height: 34px;
+        margin-top: 0;
+        padding: 0px 15px;
+
+        &-login {
+          background: #fff;
+          color: #000;
+          text-shadow: none;
+          border: 1px solid #c0c0c0;
+        }
+
+        &-fb {
+          background: #5e76ac;
+        }
+      }
+    }
+
+    button[type="submit"] {
+      width: 250px;
+      letter-spacing: .5px
+    }
+  }
+}
