--- a/app/jade/booking.jade
+++ b/app/jade/booking.jade
@@ -13,7 +13,7 @@ block main
           strong.f-bold Perhatian:
           |  Harga yang tertera adalah sebagai perkiraan terdekat. Dengan menekan tombol Make Booking, Anda akan terdaftar sebagai peminat. Customer Service kami akan menghubungi Anda via telepon/Email. Transaksi akhir tidak dilakukan di website ini.
 
-        form.sapta-form.booking
+        form.sapta-form.booking(action="booking-thank-you.html")
           h4.section-title.m-t-sm.m-b-lg.text-c-l.text-left.text-rounded Contact&nbsp;
             span.text-yellow Details
 
