--- a/app/jade/helpers/featured-blog-inspirations.jade
+++ b/app/jade/helpers/featured-blog-inspirations.jade
@@ -10,7 +10,7 @@
         .post-item.text-darker.pos-abt.text-u-c.wrapper
           label.inline.m-l-sm.f-normal.text-u-c Blog
           h3.m-l-sm.m-t-none
-            a.text-darker(href="blog-detail.html") Top 10 most romantic Destinations in the world
+            a.text-darker.f-bold(href="blog-detail.html") Top 10 most romantic Destinations in the world
 
     .col-md-6.blog-item.pos-rlt
       img(src="img/destinations/Asia.jpg", alt="")
@@ -19,7 +19,7 @@
         .post-item.text-darker.pos-abt.text-u-c.wrapper
           label.inline.m-l-sm.f-normal.text-u-c Blog
           h3.m-l-sm.m-t-none
-            a.text-darker(href="blog-detail.html") Japan Off the beaten tracks
+            a.text-darker.f-bold.text-darker(href="blog-detail.html") Japan Off the beaten tracks
 
 
     .clearfix
