--- a/app/less/web/booking.less
+++ b/app/less/web/booking.less
@@ -333,3 +333,48 @@
     height: 100%;
   }
 }
+
+
+.booking-thank-you {
+  padding-top: 30px;
+
+  .section-title {
+    .booking-page .section-title
+  }
+
+  .thank-your-header {
+    background: #f4f4f2;
+    height: 36px;
+    line-height: 36px;
+    margin-bottom: 70px;
+    font-size: 13px;
+
+     .tour-name {
+      width: 220px;
+      padding: 0 0 0 20px;
+    }
+
+    .count-adult,
+    .tour-date {
+      padding-left: 20px;
+    }
+
+    .tour-date {
+      width: 320px;
+    }
+
+    .tour-name,
+    .tour-date {
+      border-right: 2px solid #fff;
+    }
+  }
+
+  .thank-your-message {
+    width: 780px;
+    margin: 0 auto;
+
+    a {
+      color: #ff9966;
+    }
+  }
+}
