fixing flights page

--- a/app/jade/flights.jade
+++ b/app/jade/flights.jade
@@ -179,11 +179,13 @@ block main
 
       .m-t-sm.b-dashed-b-gray.m-b-xl
 
-    .container.wrapper.why-book-withs-sapta.b-dashed-b-gray
-
+    .container
       h2.head-title.text-center.text-rounded
         | Why Book With
         span.text-yellow  Sapta Tour ?
+
+    .container.wrapper.why-book-withs-sapta.b-dashed-b-gray
+
 
       .content.row
         .col-md-3.reason.text-center
