--- a/app/less/helper/icons.less
+++ b/app/less/helper/icons.less
@@ -290,5 +290,29 @@
       height: 50px;
       background-position: -304px -258px
     }
+
+    &-flight-md {
+      height: 17px;
+      width: 30px;
+      background-position: -476px -176px
+    }
+
+    &-flight-md {
+      height: 17px;
+      width: 30px;
+      background-position: -476px -176px
+    }
+
+    &-hotel-md {
+      height: 22px;
+      width: 16px;
+      background-position: -520px -173px
+    }
+
+    &-bag-md {
+      height: 20px;
+      width: 23px;
+      background-position: -552px -173px
+    }
   }
 }
