credit card page (not complete yet)

--- a/app/css/sapta-tour.css
+++ b/app/css/sapta-tour.css
@@ -1810,6 +1810,9 @@ label.error {
 .l-h {
   line-height: 1.5em;
 }
+.l-h {
+  line-height: 16px;
+}
 .v-middle {
   vertical-align: middle !important;
 }
@@ -2859,6 +2862,11 @@ fieldset[disabled] .form-control.bg-white-only {
   height: 20px;
   width: 23px;
   background-position: -552px -173px;
+}
+.bg-white .ico-lock {
+  width: 12px;
+  height: 16px;
+  background-position: -592px -176px;
 }
 .btn {
   border-radius: 0;
