--- a/app/less/helper/icons.less
+++ b/app/less/helper/icons.less
@@ -314,5 +314,11 @@
       width: 23px;
       background-position: -552px -173px
     }
+
+    &-lock {
+      width: 12px;
+      height: 16px;
+      background-position: -592px -176px
+    }
   }
 }
