--- a/app/less/helper/app.utilities.less
+++ b/app/less/helper/app.utilities.less
@@ -45,6 +45,7 @@ label {
 .l-h-2x{line-height: 2em;}
 .l-h-1x{line-height: 1.2em;}
 .l-h{line-height: 1.5em;}
+.l-h{line-height: 16px}
 .v-middle{vertical-align: middle !important;}
 .v-top{vertical-align: top !important;}
 .v-bottom{vertical-align: bottom !important;}
